--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,10 @@
 NODE_ENV=dev
 PORT=3000
 MONGO_CONNECTION_STRING="mongodb://localhost:27017/db"
-JWT_SECRET=sssssssssssss
+JWT_SECRET=zZSIsImV4cCI6MTYyNDY4MDQ3OCwiaWF0IjoxNjI0NjgwNDc4fQ
 JWT_EXPIRY=30d
+SERVICE=
+EMAIL=
+PASSWORD=
+FROM_NAME=
+FROM_EMAIL=
