--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parchaa",
+  "name": "server",
   "version": "1.0.0",
   "scripts": {
     "clean": "rimraf dist",
@@ -16,39 +16,32 @@
   },
   "dependencies": {
     "api-error-handler": "^1.0.0",
-    "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
-    "cookie-parser": "~1.3.5",
     "cors": "^2.8.4",
     "debug": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-ping": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
-    "morgan": "^1.9.1",
+    "node-schedule": "^2.0.0",
+    "nodemailer": "^6.6.2",
     "nodemon": "^1.19.1",
-    "source-map-support": "^0.5.6",
     "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.0.0-pre.40",
     "tsoa": "^3.8.0",
     "typescript": "^3.5.2",
-    "uuid": "^3.2.1",
-    "verror": "^1.10.0",
+    "verror": "^1.10.0"
   },
   "devDependencies": {
     "@types/api-error-handler": "^1.0.31",
-    "@types/body-parser": "^1.19.0",
-    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.17.12",
     "@types/glob": "^5.0.35",
     "@types/jest": "^23.3.0",
-    "@types/lodash": "^4.14.110",
-    "@types/morgan": "^1.7.35",
     "@types/node": "^15.12.2",
-    "@types/uuid": "^3.4.3",
+    "@types/node-schedule": "^1.3.1",
+    "@types/nodemailer": "^6.4.2",
     "@types/verror": "^1.10.3",
     "jest": "^24.8.0",
     "jest-express": "^1.6.0",
