--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "api-error-handler": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.1",
     "cors": "^2.8.4",
     "debug": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/api-error-handler": "^1.0.31",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.17.12",
     "@types/glob": "^5.0.35",
