--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^7.1.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
     "node-schedule": "^2.0.0",
