--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
