feat(google-login): add google login feature

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 NODE_ENV=dev
-PORT=3000
+PORT=5000
 MONGO_CONNECTION_STRING="mongodb://localhost:27017/db"
 JWT_SECRET=zZSIsImV4cCI6MTYyNDY4MDQ3OCwiaWF0IjoxNjI0NjgwNDc4fQ
 JWT_EXPIRY=30d
@@ -8,4 +8,4 @@ EMAIL=
 PASSWORD=
 FROM_NAME=
 FROM_EMAIL=
-GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_ID=353919017162-f9kck24lh3gq7r92lulhg82aavuo3h8f.apps.googleusercontent.com
