--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
     "framer-motion": "^4.1.17",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.7.1",
     "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
