--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^5.0.0-alpha.38",
+    "@material-ui/pickers": "^3.3.10",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "draft-js": "^0.11.7",
     "framer-motion": "^4.1.17",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.7.1",
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
+    "react-time-picker": "^4.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
