--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
     "react-time-picker": "^4.3.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
